--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <title>Barney</title>
     <script type="text/javascript">
        function fn(){
-        alert("CHALLENGE ACCEPTED !!!")
+         var audio1 = new Audio("audio/challenge.mp3");
+        audio1.play();
        }
     </script>
 </head>
